--- a/src/TicketManagement.UserAPI/appsettings.json
+++ b/src/TicketManagement.UserAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=TicketManagement.Database;Integrated Security=True"
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=TicketManagement.Database;Integrated Security=True;Encrypt=False"
   },
   "AllowedHosts": "*",
   "HostAddress": "https://localhost:5004/"
