--- a/src/TicketManagement.WebUI/ClientApp/package.json
+++ b/src/TicketManagement.WebUI/ClientApp/package.json
@@ -28,7 +28,7 @@
     "nth-check": "^3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&set PORT=7115&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
