--- a/src/TicketManagement.UserAPI/appsettings.Development.json
+++ b/src/TicketManagement.UserAPI/appsettings.Development.json
@@ -3,7 +3,7 @@
     "FilePath": "Logging/log.txt"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=TicketManagement.Database;Integrated Security=True"
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=TicketManagement.Database;Integrated Security=True;Encrypt=False"
   },
   "AllowedHosts": "*",
   "HostAddress": "https://localhost:5004/"
